<resources>
    <string name="app_name">Reboot</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="details">Eventuele details</string>
    <string name="text_goal">Welk doel stel jij jezelf!</string>
    <string name="het_doel">Het doel</string>
    <string name="where_how_when">Waar, wanneer en hoe voe jij het doel uit? (Precieze tijd en plaats)</string>

    <string name="waar">Waar voer je het doel uit?</string>
    <string name="wanneer">Wanneer voer je het doel uit?</string>
    <string name="hoe">Hoe voer je het doel uit?</string>
    <string name="precies">Precieze tijd en plaats</string>

    <string name="example">Voorbeelden</string>
    <string name="positive_thoughts">Beschrijf hier jouw positieve gedachten</string>
    <string name="moodboard">MoodBoard</string>
    <string name="image_text">Voeg 9  foto\'s/screenshots toe om een moodboard te creëren</string>
    <string name="another_goal">Voeg nog een doel toe</string>
    <string name="goal_overview_text">Klik op het doel om je doel overzicht te zien</string>
    <string name="positive_thought_text">Positive Gedachten</string>
    <string name="goal_text">Doel</string>
    <string name="goal_overview">Doel Overzicht</string>
    <string name="goals">Doelen</string>
    <string name="welcome">Welkom bij Maginficent Mind App</string>
    <string name="positive_thought1">Schrijf hier jouw positieve gedachten</string>
    <string name="your_positive_thought">Jou postitieve gedachten</string>

    <string name="positive_thought2">Positieve gedachten 2</string>
    <string name="positive_thought3">Positieve gedachten 3</string>
    <string name="positive_thought4">Positieve gedachten 4</string>
    <string name="positive_thought5">Positieve gedachten 5</string>

    <string name="change_from_inside">Change your world from the inside</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
