<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PositiveThoughtsActivity"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/positive_thought_text"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/positive_thoughts"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/thought1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/posistive_thought1"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/thought2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:textColor="@android:color/black"
        android:hint="@string/positive_thought2"
        />

    <EditText
        android:id="@+id/thought3EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:textColor="@android:color/black"
        android:hint="@string/positive_thought3"
        />

    <EditText
        android:id="@+id/thought4EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:textColor="@android:color/black"
        android:hint="@string/positive_thought4"/>

    <EditText
        android:id="@+id/thought5EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/positive_thought5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nextPageBtn"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/next2" />

        <Button
            android:id="@+id/exampleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/example"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>

</ScrollView>