<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoalActivity"
    android:background="@color/colorPrimary"
    >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/goal_text"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_goal"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/het_doel"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/goalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waar"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"
            />

        <EditText
            android:id="@+id/whereEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wanneer"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"            />

        <EditText
            android:id="@+id/whenEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoe"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"            />

        <EditText
            android:id="@+id/howEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precies"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"            />

        <EditText
            android:id="@+id/preciseEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"            />

        <EditText
            android:id="@+id/moreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"            />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/nextToBtn"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="300sp"
                    android:background="@drawable/next2" />


        </LinearLayout>

</LinearLayout>

</ScrollView>