<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalOverViewActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textGoalOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_overview"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle= "bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_goal"
        android:textColor="@android:color/white"
        android:textStyle= "bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:id="@+id/textViewGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/where_how_when"
        android:textColor="@android:color/white"
        android:textStyle= "bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        />

    <TextView
        android:id="@+id/textViewWhereWhenHow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>

    <!--<TextView-->
        <!--android:id="@+id/textView5"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/wanneer"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="3dp"            />-->

    <!--<TextView-->
        <!--android:id="@+id/textViewWhen"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/textView6"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/hoe"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="3dp"            />-->

    <!--<TextView-->
        <!--android:id="@+id/textViewHow"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/textView7"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/precies"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="3dp"            />-->

    <!--<TextView-->
        <!--android:id="@+id/textViewPrecise"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@android:color/white"
        android:textStyle= "bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"            />

    <TextView
        android:id="@+id/textViewMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_positive_thought"
        android:textStyle= "bold|italic"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"            />

    <TextView
        android:id="@+id/textViewPositiveThought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>

    <!--<TextView-->
        <!--android:id="@+id/textViewPositiveThought2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/textViewPositiveThought3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/textViewPositiveThought4"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->


    <!--<TextView-->
        <!--android:id="@+id/textViewPositiveThought5"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="TextView"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginBottom="6dp"/>-->

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moodboard"
        android:textStyle= "bold|italic"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"            />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            app:srcCompat="@android:color/white" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="110dp"
            android:layout_height="160dp"
            app:srcCompat="@android:color/white"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>